--- a/package.json
+++ b/package.json
@@ -20,7 +20,18 @@
   },
   "homepage": "https://github.com/Kalaxia/game-front#readme",
   "devDependencies": {
+    "css-loader": "^2.0.1",
+    "file-loader": "^2.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "vue-i18n": "^8.4.0",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "vue": "^2.5.21"
   }
 }
