--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - docker build -t kalaxia/front . 
 
 script:
-  - docker run -it kalaxia/front -e "NODE_ENV=dev" npm test
+  - docker run -it -e "NODE_ENV=test" kalaxia/front npm test
 
 deploy:
   - provider: script
