--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ services:
   - docker
 
 before_install:
-  - cp config.dist.js config.js
+  - cp config.dist.json config.json
   - docker build -t kalaxia/front . 
 
 script:
