--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test-ci": "jest --runInBand",
     "test": "jest",
     "dev": "webpack --mode=development",
-    "prod": "webpack --mode=production"
+    "prod": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -25,17 +25,21 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^24.1.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.0.1",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "terser-webpack-plugin": "^1.2.2",
     "vue-i18n": "^8.4.0",
     "vue-jest": "^3.0.3",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.27.1",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
