--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "app",
   "version": "1.0.0",
   "description": "Kalaxia game front",
-  "main": "index.js",
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": 80
+    }
+  },
   "scripts": {
     "test-ci": "jest --runInBand",
     "test": "jest",
     "dev": "nuxt",
-    "prod": "NODE_ENV=production webpack"
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "repository": {
     "type": "git",
@@ -43,7 +50,9 @@
     "@nuxtjs/pwa": "^3.0.0-beta.8",
     "chart.js": "^2.7.3",
     "gsap": "^2.1.0",
+    "js-cookie": "^2.2.0",
     "nuxt": "^2.4.3",
+    "nuxt-env": "^0.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
