--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - docker build -t kalaxia/front . 
 
 script:
-  - docker run -it -e "NODE_ENV=test" -e "PORTAL_URL=https://www.kalaxia.com" kalaxia/front npm run test-ci
+  - docker run -it -e "NODE_ENV=test" -e "PORTAL_URL=https://www.kalaxia.com" -e "API_URL=http://kalaxia_nginx" kalaxia/front
 
 deploy:
   - provider: script
