--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^2.1.0",
     "file-loader": "^2.0.0",
     "jest": "^24.1.0",
+    "jest-fetch-mock": "^2.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "terser-webpack-plugin": "^1.2.2",
@@ -51,14 +52,20 @@
     "vuex": "^3.1.0"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^~/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
       "vue"
     ],
     "moduleDirectories": [
-      "node_modules",
-      "src"
+      "node_modules"
+    ],
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.js"
     ],
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
