--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - docker build -t kalaxia/front . 
 
 script:
-  - docker run -it -e "NODE_ENV=test" -e "PORTAL_URL=https://www.kalaxia.com" -e "API_URL=http://kalaxia_nginx" kalaxia/front
+  - docker run -it -e "NODE_ENV=test" -e "PORTAL_URL=https://www.kalaxia.com" -e "API_URL=http://kalaxia_nginx" -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" kalaxia/front
 
 deploy:
   - provider: script
